frontend/test/should_fail/strfunc_001.grg
using attrib_model_001;

test r1
{
	str:NINT;

	if { str.a.indexOf("test") != -1; }   // str.a is an int not a string
}
